Mit Colab erstellt

--- a/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -4461,7 +4461,9 @@
         "            x = json.dumps(out, ensure_ascii=False)\n",
         "            out_json.write(x + \"\\n\")\n",
         "\n",
-        "    print(f\"JSON file created: {out_file}\")"
+        "    print(f\"JSON file created: {out_file}\")\n",
+        "\n",
+        "#NB: updated txt2json"
       ],
       "metadata": {
         "id": "70uOsNJMMnce"
@@ -5860,7 +5862,6 @@
       "cell_type": "code",
       "source": [
         "#create bilingual .json\n",
-        "\n",
         "lang_pair = \"en-de\"\n",
         "\n",
         "train_ft_src = \"EuroPat.de-en.20k.en\"\n",
@@ -5897,15 +5898,47 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gOynwnfSKPl8",
-        "outputId": "325e29d1-feec-4a43-c906-2d08ebe3d78c"
+        "outputId": "06975cc3-8811-45c6-f590-68c42327f975"
       },
-      "execution_count": 17,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "head: cannot open 'EuroPat.de-en.20k.train.json' for reading: No such file or directory\n"
+            "{\"translation\": {\"en\": \"Similarly, a perfect longitudinal guide along the guide track can also be achieved.\", \"de\": \"Gleichfalls kann damit aber auch eine einwandfreie Längsführung entlang der Führungsbahn erzielt werden.\"}}\n",
+            "{\"translation\": {\"en\": \"Example 2 Cloning and Expression of Botulinum Neurotoxin Type B (BoNT/B)\", \"de\": \"Beispiel 2: Klonierung und Expression von Botulinum-Neurotoxin Typ B (BoNT/B)\"}}\n",
+            "{\"translation\": {\"en\": \"The active compounds are administered, directly or in the form of suitable preparations, enterally, parenterally, dermally, nasally, by treatment of the environment or with the aid of active-compound-containing shaped articles such as, for example, strips, plates, bands, collars, ear tags, limb bands, marking devices.\", \"de\": \"Die Anwendung der Wirkstoffe erfolgt direkt oder in Form von geeigneten Zubereitungen enteral, parenteral, dermal, nasal, durch Behandlung der Umgebung oder mit Hilfe wirkstoffhaltiger Formkörper wie z.B. Streifen, Platten Bänder, Halsbänder, Ohrmarken, Gliedmaßenbänder, Markierungsvorrichtungen.\"}}\n",
+            "{\"translation\": {\"en\": \"It is also preferable to use for the copolymer used as the polymeric binder a macromer having an average molecular weight (weight average) from 1,000 to 100,000 and that in the multiphase morphology copolymer used as polymeric binder the continuous phase have a glass transition temperature below room temperature and the dispersed phase have a glass transition temperature above room temperature.\", \"de\": \"Bevorzugt ist außerdem, zur Herstellung des als polymeres Bindemittel verwendeten Copolymerisats ein Makromeres mit einem mittleren Molekulargewicht (Gewichtsmittel) von 1000 bis 100 000 einzusetzen, und daß in dem als polymeres Bindemittel eingesetzten Copolymerisat mit mehrphasiger Morphologie die kontinuierliche Phase eine Glastemperatur unterhalb Raumtemperatur und die dispergierte Phase eine Glastemperatur oberhalb Raumtemperatur aufweist.\"}}\n",
+            "{\"translation\": {\"en\": \"The first crosscut K E2 beyond the connecting cuts Q 1, Q 2 is being made at the end of the longitudinal cuts L 11 and L 41 .\", \"de\": \"Der erste Querschnitt K E2 jenseits der Verbindungsschnitte Q 1, Q 2 wird am Ende der Längsschnitte L 11 und L 41 angebracht.\"}}\n",
+            "{\"translation\": {\"en\": \"The resulting photo-sensitive layer of the aluminum web 4, which is then cut and converted into printing plates, is very uniform in its thickness and in its visual appearance.\", \"de\": \"Die erhaltene fotoempfindliche Schicht der Aluminiumbahn 4, die anschließend zu Druckplatten konfektioniert wird, ist sehr gleichmäßig in ihrer Dicke und in ihrem optischen Erscheinungsbild.\"}}\n",
+            "{\"translation\": {\"en\": \"mol of di(para-fluorophenyl)phenylphosphine oxide was reacted with 0.1 mol of 4,4'-dihydroxy-diphenylsulfone in the presence of 0.105 mol of potassium carbonate under the preparation conditions used in Examples 1 to 6 (10 hours reaction time at 180° C. to 200° C.).\", \"de\": \"Unter analogen Reaktionsbedingungen wie in Beispiel 1 bis 6 wurden 0,05 Mol Phenolphthalin mit 0,05 Mol Di-(para-fluorphenyl)-phenylphosphinoxid in Gegenwart von 0,053 Mol Kaliumcarbonat umgesetzt (5 Stunden bei 180-190 °C).\"}}\n",
+            "{\"translation\": {\"en\": \"FIG. 8 shows a variant embodiment, which has been manufactured using the blow-moulding method.\", \"de\": \"Figur 8 zeigt eine Ausführungsvariante, die im Hohlkörperblasverfahren hergestellt wurde.\"}}\n",
+            "{\"translation\": {\"en\": \"If the diameter of the outlet surface 66 e is for example twice as large as the diameter of the inlet surface 66 d, then the speed at the outlet surface 66 e corresponds to one-fourth of the speed at the inlet surface 66 d .\", \"de\": \"Ist der Durchmesser der Austrittsfläche 66e beispielsweise doppelt so gross wie der Durchmesser der Eintrittsfläche 66d, so entspricht die Geschwindigkeit an der Austrittsfläche 66e einem Viertel der Geschwindigkeit an der Eintrittsfläche 66d.\"}}\n",
+            "{\"translation\": {\"en\": \"The spacer 47 contains a connecting element receptacle 50 .\", \"de\": \"Das Distanzelement 47 weist eine Verbindungselementaufnahme 50 auf.\"}}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wc -l EuroPat.de-en.20k.train.json"
+      ],
+      "metadata": {
+        "id": "pKvBfa1fQ1gw",
+        "outputId": "a42c3a69-f183-4001-c0f1-5898da6ec7e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20000 EuroPat.de-en.20k.train.json\n"
           ]
         }
       ]
@@ -5921,12 +5954,101 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import re\n",
+        "\n",
+        "class TextCleaner:\n",
+        "    def __init__(self, min_len=3, max_len=100):\n",
+        "        self.min_len = min_len\n",
+        "        self.max_len = max_len\n",
+        "        self.skip_patterns = [\n",
+        "            r'\\bFIG\\.', r'\\bFigur\\b', r'\\bExample\\s*\\d+', r'\\bBeispiel\\s*\\d+',\n",
+        "            r'\\bTable\\s*\\d+', r'\\bTabelle\\s*\\d+'\n",
+        "        ]\n",
+        "\n",
+        "    def should_skip(self, text):\n",
+        "        return any(re.search(p, text) for p in self.skip_patterns)\n",
+        "\n",
+        "    def clean_text(self, text):\n",
+        "        text = re.sub(r'\\s+', ' ', text)    #normalize spaces\n",
+        "        text = re.sub(r'\\s+([.,;!?])', r'\\1', text)     #remove space before punctuation\n",
+        "        return text.strip()\n",
+        "\n",
+        "    def is_reasonable_length(self, text):\n",
+        "        tokens = text.strip().split()\n",
+        "        return self.min_len <= len(tokens) <= self.max_len"
+      ],
       "metadata": {
         "id": "1JxJRk1YEIR8"
       },
-      "execution_count": 13,
+      "execution_count": 27,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_path = \"EuroPat.de-en.20k.train.json\"\n",
+        "output_path = \"EuroPat.de-en.20k.train.clean.json\"\n",
+        "\n",
+        "cleaner = TextCleaner()\n",
+        "kept, skipped = 0, 0\n",
+        "\n",
+        "with open(input_path, 'r', encoding='utf-8') as fin, \\\n",
+        "     open(output_path, 'w', encoding='utf-8') as fout:\n",
+        "\n",
+        "    for line in fin:\n",
+        "        try:\n",
+        "            entry = json.loads(line)\n",
+        "            trans = entry.get(\"translation\", {})\n",
+        "\n",
+        "            src_lang, tgt_lang = list(trans.keys())\n",
+        "            src_text, tgt_text = trans[src_lang], trans[tgt_lang]\n",
+        "\n",
+        "            src_text = cleaner.clean_text(src_text)\n",
+        "            tgt_text = cleaner.clean_text(tgt_text)\n",
+        "\n",
+        "            if cleaner.should_skip(src_text) or cleaner.should_skip(tgt_text):\n",
+        "                skipped += 1\n",
+        "                continue\n",
+        "\n",
+        "            if not cleaner.is_reasonable_length(src_text) or not cleaner.is_reasonable_length(tgt_text):\n",
+        "                skipped += 1\n",
+        "                continue\n",
+        "\n",
+        "            cleaned_entry = {\n",
+        "                \"translation\": {\n",
+        "                    src_lang: src_text,\n",
+        "                    tgt_lang: tgt_text\n",
+        "                }\n",
+        "            }\n",
+        "            fout.write(json.dumps(cleaned_entry, ensure_ascii=False) + \"\\n\")\n",
+        "            kept += 1\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            print(f\"Skipped due to error: {e}\")\n",
+        "            skipped += 1\n",
+        "\n",
+        "print(f\"Cleaning finished. Kept: {kept} | Skipped: {skipped}\")\n",
+        "print(f\"Cleaned file: {output_path}\")"
+      ],
+      "metadata": {
+        "id": "hLBB1R1IRp9F",
+        "outputId": "be97514a-3edc-413c-c542-925e99595f94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cleaning finished. Kept: 18246 | Skipped: 1754\n",
+            "Cleaned file: EuroPat.de-en.20k.train.clean.json\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
