Mit Colab erstellt

--- a/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -5926,11 +5926,11 @@
         "!wc -l EuroPat.de-en.20k.train.json"
       ],
       "metadata": {
-        "id": "pKvBfa1fQ1gw",
-        "outputId": "a42c3a69-f183-4001-c0f1-5898da6ec7e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pKvBfa1fQ1gw",
+        "outputId": "a42c3a69-f183-4001-c0f1-5898da6ec7e2"
       },
       "execution_count": 26,
       "outputs": [
@@ -6015,12 +6015,8 @@
         "                skipped += 1\n",
         "                continue\n",
         "\n",
-        "            cleaned_entry = {\n",
-        "                \"translation\": {\n",
-        "                    src_lang: src_text,\n",
-        "                    tgt_lang: tgt_text\n",
-        "                }\n",
-        "            }\n",
+        "            cleaned_entry = {\"translation\": {src_lang: src_text, tgt_lang: tgt_text}}\n",
+        "\n",
         "            fout.write(json.dumps(cleaned_entry, ensure_ascii=False) + \"\\n\")\n",
         "            kept += 1\n",
         "\n",
@@ -6032,13 +6028,13 @@
         "print(f\"Cleaned file: {output_path}\")"
       ],
       "metadata": {
-        "id": "hLBB1R1IRp9F",
-        "outputId": "be97514a-3edc-413c-c542-925e99595f94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hLBB1R1IRp9F",
+        "outputId": "c91d4360-ac43-4ba0-f99c-f6159d5e485f"
       },
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -6084,7 +6080,7 @@
         "\n",
         "#greedy\n",
         "#beam_6\n",
-        "#similar corpus with beam_6"
+        "#similar corpus with beam_6 (pre and ft!)"
       ],
       "metadata": {
         "id": "1xHXcz4uETVv"
