Mit Colab erstellt

--- a/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -7473,13 +7473,13 @@
         "model = AutoModelForSeq2SeqLM.from_pretrained(\"models/opus-finetune-vienna\", device_map={\"\":0}) #NOTE load in gpu!!!!"
       ],
       "metadata": {
-        "id": "HU3NuU0HUitw",
-        "outputId": "93765d43-563f-4a2c-a3c1-6b6205f812c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HU3NuU0HUitw",
+        "outputId": "50325e32-5859-4bdd-c27f-1fdca4742d60"
       },
-      "execution_count": 24,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -7497,13 +7497,13 @@
         "%cd /content/BMT_2025S/week10_files"
       ],
       "metadata": {
-        "id": "LnHTiHiSV34r",
-        "outputId": "b533f940-ddbe-4411-decf-b8af55304b1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LnHTiHiSV34r",
+        "outputId": "f4613584-a2cc-4397-f19a-a6d39e5653bd"
       },
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -7520,15 +7520,17 @@
         "#upload source file and read\n",
         "import codecs\n",
         "\n",
-        "file_name = \"Vienna_Environmental.en-de.test.en\"\n",
-        "mt_output = open('Vienna_Environmental.en-de.test.marian.vienna.greedy.de', 'w', encoding='utf-8')\n",
+        "#file_name = \"Vienna_Environmental.en-de.test.en\"\n",
+        "#mt_output = open('Vienna_Environmental.en-de.test.marian.vienna.beam6.de', 'w', encoding='utf-8')\n",
+        "file_name = \"EuroPat.de-en.test.en\"\n",
+        "mt_output = open('EuropPat.de-en.test.marian.vienna.beam6.de', 'w', encoding='utf-8')\n",
         "\n",
         "with codecs.open(file_name, 'r', 'utf-8') as src:\n",
         "  for line in src:\n",
         "    line = line.strip()\n",
         "    encoded = tokenizer(line, return_tensors=\"pt\", padding=True).to(\"cuda\") #tokenize\n",
-        "    generated_tokens = model.generate(**encoded) #default: greedy search\n",
-        "    #generated_tokens = model.generate(**encoded, num_beams=6, early_stopping=True) #beam size 6\n",
+        "    #generated_tokens = model.generate(**encoded) #default: greedy search\n",
+        "    generated_tokens = model.generate(**encoded, num_beams=6, early_stopping=True) #beam size 6\n",
         "    translation = tokenizer.batch_decode(generated_tokens, skip_special_tokens=True) #de tokenize\n",
         "    print(translation[0], file=mt_output)\n",
         "\n",
@@ -7537,7 +7539,7 @@
       "metadata": {
         "id": "lZPQrC3BV1zH"
       },
-      "execution_count": 27,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -7563,7 +7565,7 @@
       "metadata": {
         "id": "KmG7MzjLVikm"
       },
-      "execution_count": 28,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -7572,13 +7574,13 @@
         "%cd /content/BMT_2025S/week10_files"
       ],
       "metadata": {
-        "id": "z0kXiSoNUwyO",
-        "outputId": "43ea1f77-4183-42ab-d601-789f3fdfcaed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "z0kXiSoNUwyO",
+        "outputId": "28651af5-263c-4b41-ef2f-14b8269db5ad"
       },
-      "execution_count": 29,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -7595,15 +7597,17 @@
         "#upload source file and read\n",
         "import codecs\n",
         "\n",
-        "file_name = \"Vienna_Environmental.en-de.test.en\"\n",
-        "mt_output = open('Vienna_Environmental.en-de.test.marian.europat.greedy.de', 'w', encoding='utf-8')\n",
+        "#file_name = \"Vienna_Environmental.en-de.test.en\"\n",
+        "#mt_output = open('Vienna_Environmental.en-de.test.marian.europat.beam6.de', 'w', encoding='utf-8')\n",
+        "file_name = \"EuroPat.de-en.test.en\"\n",
+        "mt_output = open('EuropPat.de-en.test.marian.europat.beam6.de', 'w', encoding='utf-8')\n",
         "\n",
         "with codecs.open(file_name, 'r', 'utf-8') as src:\n",
         "  for line in src:\n",
         "    line = line.strip()\n",
         "    encoded = tokenizer(line, return_tensors=\"pt\", padding=True).to(\"cuda\") #tokenize\n",
-        "    generated_tokens = model.generate(**encoded) #default: greedy search\n",
-        "    #generated_tokens = model.generate(**encoded, num_beams=6, early_stopping=True) #beam size 6\n",
+        "    #generated_tokens = model.generate(**encoded) #default: greedy search\n",
+        "    generated_tokens = model.generate(**encoded, num_beams=6, early_stopping=True) #beam size 6\n",
         "    translation = tokenizer.batch_decode(generated_tokens, skip_special_tokens=True) #de tokenize\n",
         "    print(translation[0], file=mt_output)\n",
         "\n",
@@ -7612,22 +7616,7 @@
       "metadata": {
         "id": "68ljG7WIUwVP"
       },
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#translate Vienna...:\n",
-        "\n",
-        "#greedy\n",
-        "#beam_6\n",
-        "#similar corpus with beam_6 (pre and ft!)"
-      ],
-      "metadata": {
-        "id": "1xHXcz4uETVv"
-      },
-      "execution_count": 23,
+      "execution_count": 37,
       "outputs": []
     }
   ]
