Mit Colab erstellt

--- a/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week10_files/finetune_MarianMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -7618,6 +7618,17 @@
       },
       "execution_count": 37,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## NB: Obtain test split (\"similar corpus\") for testing on second test corpus\n",
+        "\n",
+        "To obtain the second test corpus, I extracted 50 English segments (lines 20,000 to 20,049) from the original EuroPat.de-en.en source file contained in the EuroPat.de-en.txt.zip archive. This range was chosen to ensure that the test data is completely disjoint from the previously used training subset, which consisted of the first 20,000 segments (lines 0 to 19,999). The code for the extraction can be found in cut_dataset.py. The selected segments were saved in a separate file for the purpose of evaluating the translation quality of both fine-tuned models on unseen data."
+      ],
+      "metadata": {
+        "id": "gn6VTu9kd8q8"
+      }
     }
   ]
 }
