Mit Colab erstellt

--- a/week11_files/nmt_metrics_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week11_files/nmt_metrics_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d7d52bd-092e-4fa9-d443-d2bbced45925"
+        "outputId": "9ea95dca-c623-4b77-b9d8-d993c04dfdbc"
       },
       "outputs": [
         {
@@ -71,7 +71,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46d682ce-761f-4eb0-e912-604dc4ba89f0"
+        "outputId": "3bcbfbda-f648-4ce3-92da-1f2c8cec4253"
       },
       "execution_count": 2,
       "outputs": [
@@ -173,24 +173,24 @@
       ],
       "metadata": {
         "id": "vjgielbpPIMQ",
-        "outputId": "fcef3969-d593-41e4-f412-c1410d2e8a88",
+        "outputId": "db148705-070f-4dc7-c723-9b7ddb37d705",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'BMT_2025S'...\n",
-            "remote: Enumerating objects: 563, done.\u001b[K\n",
-            "remote: Counting objects: 100% (195/195), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (186/186), done.\u001b[K\n",
-            "remote: Total 563 (delta 125), reused 8 (delta 8), pack-reused 368 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (563/563), 172.53 MiB | 25.50 MiB/s, done.\n",
-            "Resolving deltas: 100% (300/300), done.\n",
+            "remote: Enumerating objects: 567, done.\u001b[K\n",
+            "remote: Counting objects: 100% (199/199), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (190/190), done.\u001b[K\n",
+            "remote: Total 567 (delta 128), reused 8 (delta 8), pack-reused 368 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (567/567), 172.54 MiB | 28.52 MiB/s, done.\n",
+            "Resolving deltas: 100% (303/303), done.\n",
             "Updating files: 100% (78/78), done.\n",
             "/content/BMT_2025S/week11_files\n"
           ]
@@ -219,9 +219,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#compute BLEU and chrF reference with system 1\n",
         "!sacrebleu Vienna_Environmental.en-de.test.de -l en-de -i Vienna_Environmental.en-de.test.marian.de Vienna_Environmental.en-de.test.nllb.de -m bleu chrf --paired-bs\n",
-        "\n",
         "#gold standard translation - sytem1 - system2"
       ],
       "metadata": {
@@ -666,7 +664,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Compare:\n",
+        "##reference file:\n",
+        "\n",
+        "- Vienna_Environmental.en-de.test.de\n",
+        "\n",
+        "---\n",
+        "\n",
+        "##output files:\n",
+        "\n",
+        "- Vienna_Environmental.en-de.test.marian.de (translated using original model)\n",
+        "- Vienna_Environmental.en-de.test.marian.vienna.beam6.de (translated using the vienna ft model)\n",
+        "- Vienna_Environmental.en-de.test.marian.europat.beam6.de (translated using the europat ft model)\n"
+      ],
+      "metadata": {
+        "id": "BITenKbLBSIS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##1:\n",
         "\n"
       ],
       "metadata": {
@@ -680,12 +697,12 @@
       ],
       "metadata": {
         "id": "pemR_e4yVSGb",
-        "outputId": "18bd8d2b-2e43-4ee7-cafa-fe7511259ee7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd2017e2-4660-4d55-9997-fa73593fb389"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,20 +716,176 @@
     {
       "cell_type": "code",
       "source": [
-        "#1: Compare bleu and chrF for orig and finetuned NMT (beam)\n",
+        "#1: Compare bleu and chrF for orig and finetuned NMT (beam6)\n",
         "\n",
         "!sacrebleu Vienna_Environmental.en-de.test.de -l en-de -i Vienna_Environmental.en-de.test.marian.de -m bleu chrf\n",
-        "#gold standard translation - sytem1\n"
+        "#gold standard translation - output of sytem0: (original model)"
       ],
       "metadata": {
-        "id": "xgwrbeFhVYmT"
+        "id": "txaGfWx9_G1K",
+        "outputId": "f45f80d1-0d6d-4ab4-c118-b332e50a4736",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\n",
+            "{\n",
+            " \"name\": \"BLEU\",\n",
+            " \"score\": 18.8,\n",
+            " \"signature\": \"nrefs:1|case:mixed|eff:no|tok:13a|smooth:exp|version:2.5.1\",\n",
+            " \"verbose_score\": \"47.5/24.5/13.5/7.9 (BP = 1.000 ratio = 1.163 hyp_len = 2425 ref_len = 2086)\",\n",
+            " \"nrefs\": \"1\",\n",
+            " \"case\": \"mixed\",\n",
+            " \"eff\": \"no\",\n",
+            " \"tok\": \"13a\",\n",
+            " \"smooth\": \"exp\",\n",
+            " \"version\": \"2.5.1\"\n",
+            "},\n",
+            "{\n",
+            " \"name\": \"chrF2\",\n",
+            " \"score\": 57.1,\n",
+            " \"signature\": \"nrefs:1|case:mixed|eff:yes|nc:6|nw:0|space:no|version:2.5.1\",\n",
+            " \"nrefs\": \"1\",\n",
+            " \"case\": \"mixed\",\n",
+            " \"eff\": \"yes\",\n",
+            " \"nc\": \"6\",\n",
+            " \"nw\": \"0\",\n",
+            " \"space\": \"no\",\n",
+            " \"version\": \"2.5.1\"\n",
+            "}\n",
+            "]\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#1: Compare bleu and chrF for orig and finetuned NMT (beam6)\n",
+        "\n",
+        "!sacrebleu Vienna_Environmental.en-de.test.de -l en-de -i Vienna_Environmental.en-de.test.marian.vienna.beam6.de -m bleu chrf\n",
+        "#gold standard translation - output of sytem1: (model ft on Vienna_Environmental.en-de.train.json)"
+      ],
+      "metadata": {
+        "id": "xgwrbeFhVYmT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2137769b-1522-4394-dbb9-392073bda14c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\n",
+            "{\n",
+            " \"name\": \"BLEU\",\n",
+            " \"score\": 23.2,\n",
+            " \"signature\": \"nrefs:1|case:mixed|eff:no|tok:13a|smooth:exp|version:2.5.1\",\n",
+            " \"verbose_score\": \"53.6/29.4/17.6/10.5 (BP = 1.000 ratio = 1.039 hyp_len = 2168 ref_len = 2086)\",\n",
+            " \"nrefs\": \"1\",\n",
+            " \"case\": \"mixed\",\n",
+            " \"eff\": \"no\",\n",
+            " \"tok\": \"13a\",\n",
+            " \"smooth\": \"exp\",\n",
+            " \"version\": \"2.5.1\"\n",
+            "},\n",
+            "{\n",
+            " \"name\": \"chrF2\",\n",
+            " \"score\": 58.2,\n",
+            " \"signature\": \"nrefs:1|case:mixed|eff:yes|nc:6|nw:0|space:no|version:2.5.1\",\n",
+            " \"nrefs\": \"1\",\n",
+            " \"case\": \"mixed\",\n",
+            " \"eff\": \"yes\",\n",
+            " \"nc\": \"6\",\n",
+            " \"nw\": \"0\",\n",
+            " \"space\": \"no\",\n",
+            " \"version\": \"2.5.1\"\n",
+            "}\n",
+            "]\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1: Compare bleu and chrF for orig and finetuned NMT (beam6)\n",
+        "\n",
+        "!sacrebleu Vienna_Environmental.en-de.test.de -l en-de -i Vienna_Environmental.en-de.test.marian.europat.beam6.de -m bleu chrf\n",
+        "#gold standard translation - output of sytem2: (model ft on EuroPat.de-en.20k.train.json)"
+      ],
+      "metadata": {
+        "id": "cQ7ncP4q-Ojn",
+        "outputId": "ef065830-9e0d-4a91-b852-c6d6d8a36b56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\n",
+            "{\n",
+            " \"name\": \"BLEU\",\n",
+            " \"score\": 15.0,\n",
+            " \"signature\": \"nrefs:1|case:mixed|eff:no|tok:13a|smooth:exp|version:2.5.1\",\n",
+            " \"verbose_score\": \"47.2/21.1/10.0/5.0 (BP = 1.000 ratio = 1.050 hyp_len = 2190 ref_len = 2086)\",\n",
+            " \"nrefs\": \"1\",\n",
+            " \"case\": \"mixed\",\n",
+            " \"eff\": \"no\",\n",
+            " \"tok\": \"13a\",\n",
+            " \"smooth\": \"exp\",\n",
+            " \"version\": \"2.5.1\"\n",
+            "},\n",
+            "{\n",
+            " \"name\": \"chrF2\",\n",
+            " \"score\": 51.8,\n",
+            " \"signature\": \"nrefs:1|case:mixed|eff:yes|nc:6|nw:0|space:no|version:2.5.1\",\n",
+            " \"nrefs\": \"1\",\n",
+            " \"case\": \"mixed\",\n",
+            " \"eff\": \"yes\",\n",
+            " \"nc\": \"6\",\n",
+            " \"nw\": \"0\",\n",
+            " \"space\": \"no\",\n",
+            " \"version\": \"2.5.1\"\n",
+            "}\n",
+            "]\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##2:"
+      ],
+      "metadata": {
+        "id": "A6Kf1NldAw2M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Compare with the p-values and CI\n",
+        "\n",
+        "!sacrebleu Vienna_Environmental.en-de.test.de -l en-de -i Vienna_Environmental.en-de.test.marian.de Vienna_Environmental.en-de.test.nllb.de -m bleu chrf --paired-bs\n",
+        "#gold standard translation - sytem0 - system1"
+      ],
       "metadata": {
         "id": "fXhvKHEw3wC9"
       },
