Mit Colab erstellt

--- a/week11_files/nmt_metrics_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week11_files/nmt_metrics_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -948,11 +948,11 @@
         "!sacrebleu Vienna_Environmental.en-de.test.de -l en-de -i Vienna_Environmental.en-de.test.marian.de Vienna_Environmental.en-de.test.marian.europat.beam6.de -m bleu chrf --paired-bs"
       ],
       "metadata": {
-        "id": "wcE6vl1zDUFg",
-        "outputId": "5c852025-66bf-438f-cb0a-41eef243372e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wcE6vl1zDUFg",
+        "outputId": "5c852025-66bf-438f-cb0a-41eef243372e"
       },
       "execution_count": 9,
       "outputs": [
@@ -1011,11 +1011,11 @@
         "!sacrebleu Vienna_Environmental.en-de.test.de -l en-de -i Vienna_Environmental.en-de.test.marian.vienna.beam6.de Vienna_Environmental.en-de.test.marian.europat.beam6.de -m bleu chrf --paired-bs"
       ],
       "metadata": {
-        "id": "68Iisto7DUaE",
-        "outputId": "269dc962-48a0-4459-cad3-03b59a376743",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "68Iisto7DUaE",
+        "outputId": "269dc962-48a0-4459-cad3-03b59a376743"
       },
       "execution_count": 10,
       "outputs": [
@@ -1088,11 +1088,11 @@
         "#source sentences in en (s) - golden standard translation (r) - system0 - system1 - system2 (t)"
       ],
       "metadata": {
-        "id": "bBp4-YZIElzg",
-        "outputId": "c3df4de1-6771-4aa4-98f1-583b961f028c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bBp4-YZIElzg",
+        "outputId": "c3df4de1-6771-4aa4-98f1-583b961f028c"
       },
       "execution_count": 11,
       "outputs": [
@@ -1266,6 +1266,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 🔍 COMET Evaluation Summary (Pairwise Comparisons)\n",
+        "\n",
+        "| Comparison                                 | Δ COMET Score | p-value  | Significant? | Winner                             |\n",
+        "|--------------------------------------------|----------------|----------|---------------|-------------------------------------|\n",
+        "| Baseline vs Vienna-finetuned               | +0.0021        | 0.8600   | ❌ No         | –                                   |\n",
+        "| Baseline vs EuroPat-finetuned              | +0.0169        | 0.0315   | ✅ Yes        | **Baseline**                        |\n",
+        "| Vienna-finetuned vs EuroPat-finetuned      | +0.0148        | 0.0015   | ✅ Yes        | **Vienna-finetuned**               |\n",
+        "\n",
+        "### 📌 Interpretation\n",
+        "\n",
+        "- The Vienna-finetuned model is **not significantly better** than the baseline (p = 0.86).\n",
+        "- Both the baseline and the Vienna-finetuned model **significantly outperform** the EuroPat-finetuned model.\n",
+        "- This suggests that **domain alignment** with the target evaluation domain (Vienna_Environmental) is crucial for improved translation performance.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "According to COMET comparisons using paired t-tests and bootstrap resampling, the Vienna fine-tuned model performed slightly better than the baseline, though the difference was not statistically significant. In contrast, both the baseline and Vienna-finetuned models significantly outperformed the EuroPat-finetuned variant (p < 0.05), indicating that domain alignment plays a critical role in MT quality for this dataset."
+      ],
+      "metadata": {
+        "id": "npUHTqKoQRuN"
+      }
     }
   ]
 }
